--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,29 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,intellij+iml,maven,java
+
+
+### SonarLint+IntelliJ ###
+# Reference: https://github.com/SonarSource/sonarlint-intellij/blob/master/.gitignore
+src/main/resources/plugins/*.jar
+out
+
+# ---- Sonar
+.sonar
+
+# ---- IntelliJ IDEA
+.idea
+
+# ---- Eclipse
+.settings
+
+# ---- Maven
+target
+
+# ---- Windows
+Desktop.ini
+
+# Gradle
+.gradle
+classes
+build
