Update Spring test

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Created by https://www.toptal.com/developers/gitignore/api/macos,windows,intellij+iml,maven,java
+D:\gh-repos\corock-dev\NHN-Academy\10--spring-db\assignments\nhn-board\src\main\java\com\nhnacademy\jdbc\board\config\MybatisConfig.java# Created by https://www.toptal.com/developers/gitignore/api/macos,windows,intellij+iml,maven,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,intellij+iml,maven,java
 
 ### Intellij+iml ###
